# AlloyStack

./: justfile
as_hostcall/src/: fdtab.rs
as_std/src/: fs.rs  lib.rs
common_service/ext4fdtab/: Cargo.toml
common_service/ext4fdtab/ramdisk/driver_block/: Cargo.toml
common_service/ext4fdtab/ramdisk/driver_block/src/: lib.rs  ramdisk.rs
common_service/ext4fdtab/ramdisk/ramdriver/src/: drivers.rs  lib.rs  macros.rs
common_service/ext4fdtab/ramdisk/ramdriver/src/structs/: mod.rs
common_service/ext4fdtab/src/: ext4_apis.rs  lib.rs
common_service/rcore_sfsfdtab/: Cargo.toml  README.md
common_service/rcore_sfsfdtab/ramdisk/driver_block/src/: lib.rs  stream_disk.rs
common_service/rcore_sfsfdtab/ramdisk/ramdriver/: Cargo.toml
common_service/rcore_sfsfdtab/ramdisk/ramdriver/src/: drivers.rs
common_service/rcore_sfsfdtab/ramdisk/ramdriver/src/structs/: static.rs
common_service/rcore_sfsfdtab/src/: img2sfs.rs  lib.rs  sfs_apis.rs
common_service/rcorefdtab/: Cargo.toml
common_service/rcorefdtab/src/: img2ramfs.rs  lib.rs  rc_apis.rs
common_service/ruxfdtab/src/: as_apis.rs
isol_config/: map_reduce_large_c5_ramfs.json  map_reduce_large_c5_ramfs_ext4.json  map_reduce_large_c5_ramfs_sfs.json
libasvisor/src/: lib.rs
user/mapper/src/: lib.rs
user/simple_file/src/: lib.rs
